--- a/back/salon-service/src/main/resources/application.properties
+++ b/back/salon-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=salon-service
+
+server.port=5002
+
+#MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/salondb_yt?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=19649072Sever
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
